<resources>
    <string name="app_name">Bank App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Connexion</string>
    <string name="compte">Numero Compte :</string>
    <string name="ref">Num Reference :</string>
    <string name="desc">Description :</string>
    <string name="date">Date Operation :</string>
    <string name="montant">Montant :</string>
    <string name="solde">Solde :</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>